# More-Modern-CMake

./: README.md
app_with_lib_extlib/: Readme.md
minimal_app/: CMakeLists.txt
minimal_app/app/: CMakeLists.txt
minimal_app/app/src/: main.cpp
simple_app/: CMakeLists.txt
simple_app/app/: CMakeLists.txt
simple_app/app/src/: main.cpp
simple_app/library_dynamic/: CmakeLists.txt  lib_dyn.cpp
simple_app/library_dynamic/include/: lib_dyn.h
simple_app/library_header_only/: CmakeLists.txt
simple_app/library_header_only/include/: lib_interface.h
simple_app/library_static/: CmakeLists.txt  lib_static.cpp
simple_app/library_static/include/: lib_static.h
simple_target_linking/: CmakeLists.txt  Readme.md
simple_target_linking/lib-a/: CmakeLists.txt  LibA.cpp  LibA.h
simple_target_linking/lib-b/: CmakeLists.txt  LibB.cpp  LibB.h
simple_target_linking/lib-c/: CmakeLists.txt  LibC.cpp  LibC.h
simple_target_linking/main/: CmakeLists.txt  main.cpp
